--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "fun browser game",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node index.js",
+    "startdocker": "docker build -t octagon-game . && docker run -p 3000:3000 octagon-game"
   },
   "author": "cactuscolada",
   "license": "ISC",
